readme增加 新增用于非可序列数据对象集合展示的CommonTable

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 /UnityProject/UnityProject.CSharp.Editor.csproj.DotSettings
 /UnityProject/UnityProject.sln
 /UnityProject/UnityProject.v12.suo
+/UnityProject/.vs/UnityProject/v16
+/UnityProject/Logs
+/UnityProject/obj/Debug
+*.csproj
